syntax = "proto3";
package virtengine.encryption.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/encryption/v1";

// Msg defines the encryption Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // RegisterRecipientKey registers a new recipient public key
  rpc RegisterRecipientKey(MsgRegisterRecipientKey) returns (MsgRegisterRecipientKeyResponse);

  // RevokeRecipientKey revokes an existing recipient public key
  rpc RevokeRecipientKey(MsgRevokeRecipientKey) returns (MsgRevokeRecipientKeyResponse);

  // UpdateKeyLabel updates the label of an existing recipient key
  rpc UpdateKeyLabel(MsgUpdateKeyLabel) returns (MsgUpdateKeyLabelResponse);
}

// MsgRegisterRecipientKey is the message for registering a recipient public key
message MsgRegisterRecipientKey {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "encryption/MsgRegisterRecipientKey";

  // Sender is the account registering the key (must match the key owner)
  string sender = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "sender",
    (gogoproto.moretags) = "yaml:\"sender\""
  ];

  // PublicKey is the X25519 public key bytes (32 bytes)
  bytes public_key = 2 [
    (gogoproto.jsontag) = "public_key",
    (gogoproto.moretags) = "yaml:\"public_key\""
  ];

  // AlgorithmID specifies which algorithm this key is for
  string algorithm_id = 3 [
    (gogoproto.jsontag) = "algorithm_id",
    (gogoproto.moretags) = "yaml:\"algorithm_id\""
  ];

  // Label is an optional human-readable label for the key
  string label = 4 [
    (gogoproto.jsontag) = "label,omitempty",
    (gogoproto.moretags) = "yaml:\"label\""
  ];
}

// MsgRegisterRecipientKeyResponse is the response for MsgRegisterRecipientKey
message MsgRegisterRecipientKeyResponse {
  // KeyFingerprint is the fingerprint of the registered key
  string key_fingerprint = 1 [
    (gogoproto.jsontag) = "key_fingerprint",
    (gogoproto.moretags) = "yaml:\"key_fingerprint\""
  ];
}

// MsgRevokeRecipientKey is the message for revoking a recipient public key
message MsgRevokeRecipientKey {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "encryption/MsgRevokeRecipientKey";

  // Sender is the account revoking the key (must own the key)
  string sender = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "sender",
    (gogoproto.moretags) = "yaml:\"sender\""
  ];

  // KeyFingerprint is the fingerprint of the key to revoke
  string key_fingerprint = 2 [
    (gogoproto.jsontag) = "key_fingerprint",
    (gogoproto.moretags) = "yaml:\"key_fingerprint\""
  ];
}

// MsgRevokeRecipientKeyResponse is the response for MsgRevokeRecipientKey
message MsgRevokeRecipientKeyResponse {}

// MsgUpdateKeyLabel is the message for updating a key's label
message MsgUpdateKeyLabel {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "encryption/MsgUpdateKeyLabel";

  // Sender is the account updating the key (must own the key)
  string sender = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "sender",
    (gogoproto.moretags) = "yaml:\"sender\""
  ];

  // KeyFingerprint is the fingerprint of the key to update
  string key_fingerprint = 2 [
    (gogoproto.jsontag) = "key_fingerprint",
    (gogoproto.moretags) = "yaml:\"key_fingerprint\""
  ];

  // Label is the new label for the key
  string label = 3 [
    (gogoproto.jsontag) = "label",
    (gogoproto.moretags) = "yaml:\"label\""
  ];
}

// MsgUpdateKeyLabelResponse is the response for MsgUpdateKeyLabel
message MsgUpdateKeyLabelResponse {}
