syntax = "proto3";
package virtengine.take.v1beta3;

import "gogoproto/gogo.proto";
import "virtengine/take/v1beta3/params.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/take/v1beta3";

// GenesisState stores slice of genesis deployment instance
message GenesisState {
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}
